--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
-    "prettier": "2.0.4"
+    "css-loader": "^3.5.3",
+    "prettier": "2.0.4",
+    "style-loader": "^1.2.0"
   },
   "repository": {
     "type": "git",
