--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "gatsby-plugin-react-helmet": "^3.3.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0"
+    "react-helmet": "^6.0.0",
+    "react-image-gallery": "^1.0.7"
   },
   "devDependencies": {
     "css-loader": "^3.5.3",
