--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "gatsby": "^2.20.12",
     "gatsby-plugin-react-helmet": "^3.3.0",
+    "gatsby-source-contentful": "^2.3.37",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
