--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-image-gallery": "^1.0.7"
   },
   "devDependencies": {
+    "create-strapi-app": "^3.1.4",
     "css-loader": "^3.5.3",
     "prettier": "2.0.4",
     "style-loader": "^1.2.0"
